# DinoGame

./: CMakeLists.txt  Dino.cpp  Dino.h  Globals.cpp  Globals.h  README.md  SawSpawner.cpp  SawSpawner.h  SoundManager.cpp  SoundManager.h  TrapSpawner.cpp  TrapSpawner.h  main.cpp
Creature/: Dino.cpp  Dino.h  FlyingBird.cpp  FlyingBird.h  Obstacle.cpp  Obstacle.h  ObstacleFactory.cpp  ObstacleFactory.h  ObstacleThread.cpp  ObstacleThread.h  Saw.cpp  Saw.h  Trap.cpp  Trap.h
GameSystems/: CollisionChecker.cpp  CollisionChecker.h
UI/: GameInterface.cpp  GameInterface.h
Utils/: Animator.cpp  Animator.h  FontManager.cpp  FontManager.h  SoundManager.cpp  SoundManager.h  TextureManager.cpp  TextureManager.h
